"make clean" in docs subdirectory should clean docs/psdoc also

--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -111,6 +111,8 @@ wxhelp_figures wxhelp/*.html wxhelp/wgnuplot.hhc wxhelp/wgnuplot.hhk	\
 wxhelp/wgnuplot.htc wxhelp/doc2html$(EXEEXT) windows/wgnuplot.htk	\
 svg_figures html/*.html html/*.svg html/*.hhc html/*.hhk                \
 webp_figures html/*.webp html/figure_mask.png                           \
+psdoc/*.aux psdoc/*.dvi psdoc/*.log                                     \
+psdoc/ps_fontfile_doc.pdf psdoc/ps_fontfile_doc.ps psdoc/ps_symbols.ps  \
 windows/*.png gnuplot.htb gnuplot.texi gnuplot-eldoc.el $(ELCS)
 
 DISTFILES = $(DIST_COMMON) $(SOURCES) $(DOCHEADERS) $(EXTRA_DIST)
