Collect code and structures that support marks into marks.h and marks.c
This commit creates a new pair of source files marks.c and marks.h.
These collect chunks of code added to various gnuplot source files in 2024
by Hiroki Motoyoshi to implement "marks" as an object type and a plot style.
The commit series started with
	7f88f4e4e 'New object and plotting style "mark"'.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -54,7 +54,7 @@ gplocale.c gplocale.h \
 gplt_x11.h graph3d.c graph3d.h graphics.c graphics.h \
 help.c help.h hidden3d.c hidden3d.h history.c internal.c internal.h \
 interpol.c interpol.h jitter.c jitter.h libcerf.c libcerf.h \
-loadpath.c loadpath.h \
+loadpath.c loadpath.h marks.c marks.h \
 matrix.c matrix.h misc.c misc.h mouse.c mouse.h mousecmn.h \
 multiplot.c multiplot.h parse.c parse.h plot.c plot.h plot2d.c plot2d.h \
 plot3d.c plot3d.h pm3d.c pm3d.h qt_table.h readline.c readline.h save.c \
