Update copyright and other dates to 2025
(also fills in a plot target missing from the Makefile)

--- a/demo/html/Makefile
+++ b/demo/html/Makefile
@@ -45,7 +45,7 @@ html: airfoil.html animation.html approximate.html armillary.html array.html arr
       varcolor.html vector.html violinplot.html viridis.html voxel.html vplot.html \
       walls.html waterfallplot.html windrose.html world.html zerror.html \
       isosurface.html azimuth.html boxes3d.html \
-      mark_labels.html extra_points.html mark_grouping.html windbarb.html
+      mark_labels.html extra_points.html mark_grouping.html mark_formulas.html windbarb.html
 
 index.html: index.save
 	cp index.save index.html
