--- a/demo/html/Makefile
+++ b/demo/html/Makefile
@@ -43,6 +43,7 @@ html: airfoil.html animation.html approximate.html armillary.html array.html arr
       transparent.html transparent_solids.html textbox.html tics.html timedat.html ttics.html \
       unicode.html using.html \
       varcolor.html vector.html violinplot.html viridis.html voxel.html vplot.html \
+      watchpoints.html watch_contours.html \
       walls.html waterfallplot.html windrose.html world.html zerror.html \
       isosurface.html azimuth.html boxes3d.html \
       mark_labels.html extra_points.html mark_grouping.html mark_formulas.html windbarb.html
