Allow installation of 64bit version on Windows on ARM systems
Previous architecture flags in the installer allowed only installation on
x64 machines, but Windows on ARM64 can run x64 executables via emulation.

See also patch #831

--- a/config/mingw/Makefile
+++ b/config/mingw/Makefile
@@ -1286,8 +1286,8 @@ installer:
 ifndef M32
 	sed -i \
 	    -e "s/@INSTALLER@/gp$(SHORTVERSION)-win64-setup/" \
-	    -e 's/^\(ArchitecturesAllowed\)=/\1=x64/g' \
-	    -e 's/^\(ArchitecturesInstallIn64BitMode\)=/\1=x64/g' \
+	    -e 's/^\(ArchitecturesAllowed\)=/\1=x64compatible/g' \
+	    -e 's/^\(ArchitecturesInstallIn64BitMode\)=/\1=x64compatible/g' \
 	    ./dist/gnuplot.iss
 else
 	sed -i \
